refactor: improve openapi specs
